# s2u-any_config

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
cmake/: sourcesdk.cmake
cmake/platform/: linux.cmake  macos.cmake  shared.cmake  windows.cmake
include/: any_config.hpp
include/any_config/: base.hpp  json.hpp  keyvalues.hpp
include/any_config/base/: base.hpp  ireader.hpp  iwriter.hpp  reader.hpp  types.hpp  writer.hpp
include/any_config/file_extension/: check.hpp
include/any_config/json/: reader.hpp  types.hpp  writer.hpp
include/any_config/keyvalues/: reader.hpp  types.hpp  writer.hpp
src/: any_config.cpp
src/any_config/base/: base.cpp  reader.cpp  writer.cpp
src/any_config/json/: reader.cpp  writer.cpp
src/any_config/keyvalues/: reader.cpp  writer.cpp
